--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,17 @@
-body{
+
+@font-face {
+    font-family:header;
+    src:url("Bebas-Regular.otf");
+    font-weight:200;
+ }
+ body{
     margin: 0;
     padding: 0;
 }
 *{
     margin :0;
     padding: 0;
-    font-family: sans-serif;
+    font-family:header;
 }
 .container{
     width: 100%;
