--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@ url("fonts/ostrich_thick/ostrich-sans-black.svg#filename") format("svg");
     src: url("fonts/jonathanharris/true_lies-webfont.woff") format("woff"),
 url("fonts/jonathanharris/true_lies-webfont.svg#filename") format("svg");
 }
+
+@font-face {
+    font-family: "ostrich_rounded";
+    src: url("fonts/ostrich_medium_rounded/ostrichsansrounded-medium.woff") format("woff"),
+url("fonts/ostrich_medium_rounded/ostrichsansrounded-medium.svg") format("svg");
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -37,30 +44,31 @@ body{
 }
 .menu ul{
     display: inline-flex;
-    margin: 50px;
+    margin: 20px;
     background: transparent;
 }
 .menu ul li{
+    font-family: "ostrich_rounded";
+    font-size: 25px;
     list-style: none;
-    margin: 0 20px;
+    margin: 0 30px;
     color: #b2b1b1;
     cursor: pointer;
     background: transparent;
 }
-
 .active{
     color: #fec325 !important;
     background: transparent;
 }
 .signup-btn{
-  top: 40px;
-  right: 80px;
+  top: 20px;
+  right: 40px;
   position: absolute;
   text-decoration: none;
   color: #fff;
   border: 2px solid transparent;
   border-radius: 20px;
-  background-image: linear-gradient(#1e272e, #1e272e),radial-gradient(circle at top left,#fd00da,#19d7f8);
+  background-image: linear-gradient(#1e272e, #1e272e),radial-gradient(circle at top left,#e7ef32,#19d7f8);
   background-origin: border-box;
   background-clip: content-box,border-box;
 }
@@ -71,6 +79,7 @@ body{
 }
 .signup-text{
     background: transparent;
+    font-family: ostrich_thick;
 }
 .banner{
     width: 80%;
@@ -85,14 +94,15 @@ body{
     width: 50%;
     float: left;
 }
-.app-text  h1{
+.app-text h1{
     font-family: "jonathanharris";
     font-weight: normal;
     font-style: normal;
-    font-size: 80px;
+    font-size: 160px;
     width: 640px;
     position: relative;
-    margin-left: 40px;
+    margin-left: 130px;
+    margin-top: 45px;
     color: #efefef;
     background: transparent;
     text-shadow: 4px 4px 10px #42455a;
@@ -100,10 +110,10 @@ body{
 .app-text p{
     font-family: "ostrich_reg";
     width: 650px;
-    font-size: 40px;
-    margin: 30px 0 30px 40px;
-    line-height: 30px;
-    color: #919191;
+    font-size: 45px;
+    margin: 30px 0 30px 60px;
+    line-height: 37px;
+    color: #a1a1a1;
 }
 .app-picture{
     width: 50%;
@@ -114,6 +124,7 @@ body{
     width: 100%;
     float: right;
     background: transparent;
+    resize: inherit;
 }
 .cloudcontainer{
     position: absolute;
@@ -144,10 +155,10 @@ body{
 @keyframes animate{
     0%
     {
-        background-position: 5440px;
+        background-position: 100px;
     }
     100%
     {
-        background-position: 100px;
+        background-position: 5440px;
     }
 }
