--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body{
 *{
     margin :0;
     padding: 0;
-    font-family:header;
+    
 }
 .container{
     width: 100%;
@@ -49,7 +49,7 @@ body{
 }
 .menu ul li{
     font-family: "ostrich_rounded";
-    font-size: 25px;
+    font-size: 30px;
     list-style: none;
     margin: 0 30px;
     color: #b2b1b1;
@@ -62,24 +62,25 @@ body{
 }
 .signup-btn{
   top: 20px;
-  right: 40px;
+  right: 30px;
   position: absolute;
   text-decoration: none;
   color: #fff;
   border: 2px solid transparent;
-  border-radius: 20px;
+  border-radius: 30px;
   background-image: linear-gradient(#1e272e, #1e272e),radial-gradient(circle at top left,#e7ef32,#19d7f8);
   background-origin: border-box;
   background-clip: content-box,border-box;
 }
 .signup-btn span{
     display:block;
-    padding: 8px 22px;
+    padding: 5px 24px;
     background: transparent;
 }
 .signup-text{
+    font-size: 20px;
     background: transparent;
-    font-family: ostrich_thick;
+    font-family: "ostrich_thick";
 }
 .banner{
     width: 80%;
@@ -111,7 +112,7 @@ body{
     font-family: "ostrich_reg";
     width: 650px;
     font-size: 45px;
-    margin: 30px 0 30px 60px;
+    margin: 30px 0 30px 70px;
     line-height: 37px;
     color: #a1a1a1;
 }
