--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,14 @@ body{
   right: 30px;
   position: absolute;
   text-decoration: none;
-  color: #fff;
+  color: #fec345;
   border: 2px solid transparent;
   border-radius: 30px;
-  background-image: linear-gradient(#1e272e, #1e272e),radial-gradient(circle at top left,#e7ef32,#19d7f8);
+  background-image: linear-gradient(#000, #000),radial-gradient(circle at top left,#000,#000);
   background-origin: border-box;
   background-clip: content-box,border-box;
 }
+
 .signup-btn span{
     display:block;
     padding: 5px 24px;
@@ -82,6 +83,8 @@ body{
     background: transparent;
     font-family: "ostrich_thick";
 }
+
+
 .banner{
     width: 80%;
     height: 70%;
@@ -161,5 +164,67 @@ body{
     100%
     {
         background-position: 5440px;
+    }
+}
+
+.foot{
+    position: absolute;
+    top:100%;
+    left:41.5%;
+    transform:translateY(-95%);
+    width:100%;
+    text-align:center;
+
+}
+.btn{
+    display:inline-block;
+    width:38px;
+    height:38px;
+    background:#000000;
+    margin: 4px;
+    border-radius:30%;
+    box-shadow:0 5px 15px -5px #00000070;
+    color:#fec325;
+    overflow:hidden;
+    position:relative;
+}
+.btn i{
+    line-height:38px;
+    font-size:16px;
+    transition:0.2s linear;
+}
+.btn:hover i{
+    transform:scale(1.2);
+    color:#000000;
+}
+.btn::before{
+    content:"";
+    position:absolute;
+    width: 120%;
+    height: 120%;
+    background:#fec325;
+    transform:rotate(45deg);
+    left:-110%;
+    top:90%;
+}
+
+.btn:hover::before{
+    animation: aaa 0.7s 1;
+    top: -10%;
+    left: -10%;
+}
+@keyframes aaa{
+    0%
+    {
+        left:-110%;
+        top:90%;
+    }
+    50%{
+        left:10%;
+        top:-30%;
+    }
+    100%{
+        top:-10%;
+        left:-10%;
     }
 }
