--- a/css/style.css
+++ b/css/style.css
@@ -168,32 +168,33 @@ body{
 }
 
 .foot{
-    position: absolute;
-    top:100%;
-    left:41.5%;
-    transform:translateY(-95%);
+    margin:0;
+    padding: 0;
+    position: static;
+    transform:translateY(0%);
+    transform:translateX(0%);
     width:100%;
-    text-align:center;
+    -ms-ime-align:center;
 
 }
 .btn{
     display:inline-block;
+    top:35px;
+    left:500px;
     width:38px;
     height:38px;
     background:#000000;
     margin: 4px;
     border-radius:30%;
     box-shadow:0 5px 15px -5px #00000070;
-    color:#fec325;
     overflow:hidden;
     position:relative;
 }
-.btn i{
-    line-height:38px;
-    font-size:16px;
+.btn img{
+    
     transition:0.2s linear;
 }
-.btn:hover i{
+.btn:hover img{
     transform:scale(1.2);
     color:#000000;
 }
