--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body{
 *{
     margin :0;
     padding: 0;
-    
+
 }
 .container{
     width: 100%;
@@ -131,7 +131,7 @@ body{
     resize: inherit;
 }
 .cloudcontainer{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -146,7 +146,7 @@ body{
     -ms-filter: blur(5px);
     filter: blur(3px);
     opacity: 0.4;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -154,7 +154,7 @@ body{
     background: url(vectorcloud.png);
     background-size: cover;
     animation: animate 90s linear infinite;
-    
+
 }
 @keyframes animate{
     0%
@@ -168,30 +168,33 @@ body{
 }
 
 .foot{
-    margin:0;
-    padding: 0;
-    position: static;
+    position: fixed;
+    top:91%;
+    left:36.5%;
     transform:translateY(0%);
-    transform:translateX(0%);
+    text-align:center;
+    /*transform:translateX(0%);*/
     width:100%;
-    -ms-ime-align:center;
-
+    /*-ms-ime-align:center*/
 }
 .btn{
     display:inline-block;
-    top:35px;
-    left:500px;
     width:38px;
     height:38px;
     background:#000000;
     margin: 4px;
     border-radius:30%;
     box-shadow:0 5px 15px -5px #00000070;
+    color:#fec325;
     overflow:hidden;
     position:relative;
+    box-shadow: 1px 1px #42455a;
 }
 .btn img{
-    
+    /*top: 50%;
+    align: content;*/
+    line-height:38px;
+    font-size:16px;
     transition:0.2s linear;
 }
 .btn:hover img{
@@ -217,15 +220,15 @@ body{
 @keyframes aaa{
     0%
     {
-        left:-110%;
-        top:90%;
+        left: -110%;
+        top: 90%;
     }
     50%{
-        left:10%;
-        top:-30%;
+        left: 10%;
+        top: -30%;
     }
     100%{
-        top:-10%;
-        left:-10%;
+        top: -10%;
+        left: -10%;
     }
 }
