--- a/css/style.css
+++ b/css/style.css
@@ -55,10 +55,18 @@ body{
     color: #b2b1b1;
     cursor: pointer;
     background: transparent;
+    transition: 0.2s;
+}
+.menu ul li:hover{
+    color: #dddddd;
+    transform: scale(1.1) rotate(-3deg);
 }
 .active{
     color: #fec325 !important;
     background: transparent;
+}
+.active:hover{
+    transform: scale(1.1) rotate(0deg);
 }
 .signup-btn{
   top: 20px;
@@ -68,11 +76,15 @@ body{
   color: #fec345;
   border: 2px solid transparent;
   border-radius: 30px;
-  background-image: linear-gradient(#000, #000),radial-gradient(circle at top left,#000,#000);
+  background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#000);
   background-origin: border-box;
   background-clip: content-box,border-box;
+  transition: 0.4s;
 }
-
+.signup-btn:hover{
+    color: #f3a852;
+    background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#333333);
+}
 .signup-btn span{
     display:block;
     padding: 5px 24px;
@@ -82,6 +94,7 @@ body{
     font-size: 20px;
     background: transparent;
     font-family: "ostrich_thick";
+    transition: 0.2s;
 }
 
 
