--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,12 @@ body{
   background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#000);
   background-origin: border-box;
   background-clip: content-box,border-box;
-  transition: 0.4s;
+  transition: 0.1s;
 }
 .signup-btn:hover{
     color: #f3a852;
     background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#333333);
+    transform: scale(1.1);
 }
 .signup-btn span{
     display:block;
