--- a/team_page/style.css
+++ b/team_page/style.css
@@ -17,7 +17,7 @@ a{
     left: 10px;
     display: inline-block;
     padding: 10px;
-    color: yellow;
+    color: white;
     text-transform: uppercase;
     letter-spacing: 2px;
     text-decoration: none;
@@ -117,7 +117,7 @@ h1 span:nth-child(3){
 }
 .team .card .box:hover{
 	margin-top:-35px;
-	box-shadow:0px 0px 40px yellow;
+	box-shadow:0px 0px 40px white;
 }
 .team .card .box img{
 	width:150px;
