--- a/loginpage/css/style.css
+++ b/loginpage/css/style.css
@@ -77,7 +77,7 @@ body{
 }
 .container{
     width: 20%;
-    height: 65%;
+    height: 47%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -85,7 +85,7 @@ body{
     transform: translate(-50%, -50%);
     text-align: center;
     color: #d6d3d3;
-    border: 1.2px;
+    border: 2px;
     border-style:solid;
 
     border-color: #fec325cc;
@@ -107,7 +107,7 @@ body{
 }
 .container h1{
     font-size: 50px;
-    margin-top: 10%;
+    margin-top: 20%;
     margin-bottom: 30px;
     text-shadow: 2px 2px #7977747d;
 }
@@ -119,7 +119,7 @@ body{
     background: #b1b1b1b3;
     border-radius: 18px;
     margin: 10px auto;
-    background: #b1b1b126;
+    background: #b0b1b138;
 }
 ::placeholder{
     color: #fec325b1;
@@ -154,7 +154,7 @@ body{
     width: 120px;
     height: 30px;
     border-radius: 1px;
-    margin: 20px auto;
+    margin: 40px auto 10px;
     background:#3333307a;
     border: 1.3px;
     border-style:solid;
