--- a/team_page/style.css
+++ b/team_page/style.css
@@ -9,10 +9,14 @@ body {
 }
 
 body {
+  background: url(team.jpg);
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #999;
-  background-color: white;
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-size: 100% 100%;
+
 }
 
 h1,
@@ -21,13 +25,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 20px 0;
+
+  margin: 0 0 40px 0;
   text-transform: none;
-  color: rgba(254, 82, 76, 1);
+  color:#fec345;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 600;
   letter-spacing: 1px;
-  line-height: 1.5;
+  line-height: 2.5;
 }
 
 a:link,
@@ -110,12 +115,12 @@ a:hover{
   transition: all 0.3s ease-in-out;
 }
 
+
 .team-member figure:hover figcaption {
   visibility: visible;
   color: #fff;
-  background: rgba(247, 202, 24, 1);
+  background: #fec325;
   /* Primary color, can be changed via colors.css */
-  
   height: 100%;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -125,6 +130,9 @@ a:hover{
 
 .team-member figure:hover figcaption ul li a:hover {
   color: rgba(49, 49, 49, .97);
+}
+.container{
+  margin:10% auto auto auto;
 }
 
 .team-member figure img {
