--- a/team_page/style.css
+++ b/team_page/style.css
@@ -75,8 +75,8 @@ a:hover{
 
 .team-member figcaption ul {
   list-style: none;
-	margin-bottom: 50%;
-
+  margin: 0;
+  padding: 0;
 }
 
 .team-member figcaption ul {
@@ -118,6 +118,7 @@ a:hover{
 
 .team-member figure:hover figcaption {
   visibility: visible;
+  color: #fff;
   background: #fec325;
   /* Primary color, can be changed via colors.css */
   height: 100%;
