--- a/team_page/style.css
+++ b/team_page/style.css
@@ -1,8 +1,10 @@
+
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css';
 @import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css';
 @import 'https://fonts.googleapis.com/css?family=Raleway:100,600';
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300';
-html,
+html;
+
 body {
   width: 100%;
   height: 100%;
@@ -70,7 +72,10 @@ a:hover{
 }
 
 .team-member figcaption p {
-  font-size: 16px;
+  font-family: "Poppins";
+	font-size: 20px;
+	color: black;
+	text-shadow: 2px 3px 6px #42455a;
 }
 
 .team-member figcaption ul {
