--- a/team_page/style.css
+++ b/team_page/style.css
@@ -1,8 +1,17 @@
-
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css';
 @import 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css';
 @import 'https://fonts.googleapis.com/css?family=Raleway:100,600';
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300';
+@font-face {
+    font-family: "ostrich_thick";
+    src: url("fonts/ostrich_thick/ostrich-sans-black.woff") format("woff"),
+url("fonts/ostrich_thick/ostrich-sans-black.svg#filename") format("svg");
+}
+@font-face {
+    font-family: "ostrich_rounded";
+    src: url("fonts/ostrich_medium_rounded/ostrichsansrounded-medium.woff") format("woff"),
+url("fonts/ostrich_medium_rounded/ostrichsansrounded-medium.svg") format("svg");
+};
 html;
 
 body {
@@ -20,13 +29,70 @@ body {
   background-size: 100% 100%;
 
 }
+.headercontainer{
+    width: 100%;
+    height: 100%;
+    background: transparent;
+}
+.menu_header_container ul{
+    display: inline-flex;
+    margin: 20px;
+    background: transparent;
+}
+.menu_header_container ul li{
+    font-family: "ostrich_rounded";
+    font-size: 30px;
+    list-style: none;
+    margin: 0 30px;
+    color: #b2b1b1;
+    cursor: pointer;
+    background: transparent;
+    transition: 0.2s;
+		text-decoration: none;
+}
+.menu_header_container ul li:hover{
+    color: #dddddd;
+    transform: scale(1.1) rotate(-3deg);
+}
+.active{
+    color: #fec325 !important;
+    background: transparent;
+}
+.active:hover{
+    transform: scale(1.1) rotate(0deg);
+}
+.signup-btn{
+  top: 20px;
+  right: 30px;
+  position: absolute;
+  text-decoration: none;
+  color: #fec345;
+  border: 2px solid transparent;
+  border-radius: 30px;
+  background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#000);
+  background-origin: border-box;
+  background-clip: content-box,border-box;
+  transition: 0.2s;
+}
+.signup-btn:hover{
+    background-image: linear-gradient(#000, #000),radial-gradient(circle at center,#000,#fec3453a);
+    transform: scale(1.1);
+		text-decoration: none;
+}
+.signup-btn span{
+    display:block;
+    padding: 5px 24px;
+    background: transparent;
+		text-decoration: none;
+}
+.signup-text{
+    font-size: 20px;
+    background: transparent;
+    font-family: "ostrich_thick";
+    transition: 0.2s;
+}
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
 
   margin: 0 0 40px 0;
   text-transform: none;
@@ -63,12 +129,13 @@ a:hover{
 .team-member figure {
   position: relative;
   overflow: hidden;
-  padding:   0;
+  padding: 0;
   margin: 0;
 }
 
 .team-member figure img {
   min-width: 100%;
+  margin: 5% auto auto auto;
 }
 
 .team-member figcaption p {
@@ -103,7 +170,7 @@ a:hover{
 }
 
 .team-member figcaption {
-  padding: 50px;
+  padding: 45px;
   color: transparent;
   background-color: transparent;
   position: absolute;
@@ -122,22 +189,22 @@ a:hover{
 
 
 .team-member figure:hover figcaption {
+  margin: 35% auto auto auto;
   visibility: visible;
   color: #fff;
   background: #fec325;
   /* Primary color, can be changed via colors.css */
-  height: 100%;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
+  height: 77.5%;
+  
   transition: all 0.3s ease-in-out;
 }
 
 .team-member figure:hover figcaption ul li a:hover {
+  margin: 25% auto auto auto;
   color: rgba(49, 49, 49, .97);
 }
 .container{
-  margin:10% auto auto auto;
+  margin:10% auto auto 0;
 }
 
 .team-member figure img {
@@ -153,6 +220,7 @@ a:hover{
 }
 
 .team-member figure:hover img {
+  
   -webkit-transform: scale(1.1) rotate(1deg) translateY(12px);
   -moz-transform: scale(1.1) rotate(1deg) translateY(12px);
   -o-transform: scale(1.1) rotate(1deg) translateY(12px);
