--- a/team_page/style.css
+++ b/team_page/style.css
@@ -27,7 +27,7 @@ body {
   background-attachment: fixed;
   background-repeat:no-repeat;
   background-size: 100% 100%;
-
+	text-decoration: none;
 }
 .headercontainer{
     width: 100%;
@@ -48,10 +48,10 @@ body {
     cursor: pointer;
     background: transparent;
     transition: 0.2s;
-		text-decoration: none;
 }
 .menu_header_container ul li:hover{
-    color: #dddddd;
+    text-decoration: none;
+		color: #dddddd;
     transform: scale(1.1) rotate(-3deg);
 }
 .active{
@@ -60,6 +60,7 @@ body {
 }
 .active:hover{
     transform: scale(1.1) rotate(0deg);
+		text-decoration: none;
 }
 .signup-btn{
   top: 20px;
@@ -90,6 +91,7 @@ body {
     background: transparent;
     font-family: "ostrich_thick";
     transition: 0.2s;
+		text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -194,7 +196,7 @@ a:hover{
   color: #fff;
   background: #fec325;
   /* Primary color, can be changed via colors.css */
-  height: 77.5%;
+  height: 95.5%;
   
   transition: all 0.3s ease-in-out;
 }
@@ -230,4 +232,7 @@ a:hover{
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+}
+.no_und{
+    text-decoration: none;
 }
