--- a/lion/style.css
+++ b/lion/style.css
@@ -34,11 +34,11 @@
   bottom:0;
   margin-bottom:20px;
   font-family:'Open Sans', sans-serif;
-  color:#b297a2;
+  color:#3e1a29;
   font-size:0.7em;
   text-transform: uppercase;
   text-align : center;
 }
 #credits a {
-  color:#b297a2;
+  color:#50323d;
 }
