--- a/signup/style/style.css
+++ b/signup/style/style.css
@@ -9,6 +9,14 @@ url("fonts/ostrich_medium_rounded/ostrichsansrounded-medium.svg#filename") forma
     src: url("fonts/ostrich_thick/ostrich-sans-black.woff") format("woff"),
 url("fonts/ostrich_thick/ostrich-sans-black.svg#filename") format("svg");
 }
+::-webkit-scrollbar{
+    margin:auto;
+    background-color: #fec345;
+}
+::-webkit-scrollbar-thumb{
+    margin: auto;
+    background-color: #fec325;
+}
 
 body{
     margin: 0%;
@@ -18,36 +26,23 @@ body{
     margin: 0;
     padding: 0;
 }
-
-.bgcontainer{
+#particles-js{
+    background:#fec345 ;
+    background-size:cover;
+    background-position: fixed;
+    height:100vh;
+}
+.whole{
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
-    background: #000000;
-    z-index: -1;
-}
-.bg{
-    -webkit-filter: blur(2px);
-    -moz-filter: blur(2px);
-    -o-filter: blur(2px);
-    -ms-filter: blur(2px);
-    filter: blur(0px);
-    opacity: 0.7;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(oscar_unsplash.jpg);
-    background-size: cover;
+    height: 100vh;
 }
 
 .headercontainer{
     width: 100%;
     height: 100%;
-    background: transparent;
 }
 .menu ul{
     display: inline-flex;
@@ -59,24 +54,24 @@ body{
     font-size: 22px;
     list-style: none;
     margin: 0 24px;
-    color: #b2b1b1;
+    color: #000000;
     cursor: pointer;
     background: transparent;
     transition: 0.2s;
 }
 .menu ul li:hover{
-    color: #dddddd;
+    color: #34495e;
     transform: scale(1.1) rotate(-3deg);
 }
 .active{
-    color: #fec325 !important;
+    color: #4580fe!important;
     background: transparent;
 }
 .no_und{
     text-decoration: none;
 }
 .container{
-    width: 25%;
+    width: 20%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -87,26 +82,27 @@ body{
     border: 2px;
     border-style:solid;
 
-    border-color: #fec325cc;
+    border-color: #fec345;
     border-radius:20px;
-    background: #00000090;
+    background: #000000;
     /*box-shadow: 0px 0px 50px 5px #d6d3d318;*/
     animation: breathe 3s ease-in-out infinite;
 }
+
 @keyframes breathe{
     0%{
-        box-shadow: 0px 0px 20px 5px #fec325cf;
+        box-shadow: 0px 0px 20px 5px #00000090;
     }
     50%{
-        box-shadow: 0px 0px 30px 10px #d6d3d346;
+        box-shadow: 0px 0px 25px 8px #00000090;
     }
     100%{
-        box-shadow: 0px 0px 20px 5px #fec325cf;
+        box-shadow: 0px 0px 20px 5px #00000090;
     }
 }
 .container h1{
     font-size: 50px;
-    margin-top: 10%;
+    margin-top: 13%;
     margin-bottom: 30px;
     text-shadow: 2px 2px #7977747d;
 }
@@ -118,7 +114,7 @@ body{
     background: #b1b1b1b3;
     border-radius: 18px;
     margin: 10px auto;
-    background: #b1b1b126;
+    background: #b0b1b138;
 }
 ::placeholder{
     color: #fec325b1;
@@ -134,11 +130,12 @@ body{
     height: 40px;
     color: white;
 }
+
 .signupbtn{
     width: 120px;
     height: 30px;
     border-radius: 1px;
-    margin: 10px auto 20px;
+    margin: 40px auto 10px;
     background:#3333307a;
     border: 1.3px;
     border-style:solid;
@@ -163,9 +160,11 @@ body{
     text-decoration: none;
     color: #fec3257a;
     text-align: center;
-    margin: 0px auto 15px;
+    margin: 0px auto;
+    padding-top: 10px;
+    padding-bottom: 20px;
     font-size: 20px;
-    transition: 0.3s;
+    transition: 0.3s;   
 }
 .b1:hover{
     color: #fec325;
